--- a/ControllerProgrammer.Main/Views/MainWindow.xaml
+++ b/ControllerProgrammer.Main/Views/MainWindow.xaml
@@ -9,6 +9,7 @@
         xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
+        dx:ThemeManager.ThemeName="Office2019DarkGray"
         Title="Controller Programmer" Height="700" Width="800" ResizeMode="CanResize">
     <Grid>
         <ContentControl prism:RegionManager.RegionName="{x:Static common:Regions.ProgramRegion}" />
