--- a/ControllerProgrammer.ProgramForm/Views/DataInputView.xaml
+++ b/ControllerProgrammer.ProgramForm/Views/DataInputView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:common="clr-namespace:ControllerProgrammer.Common.Constants;assembly=ControllerProgrammer.Common"
+             xmlns:serviceCommon="clr-namespace:ControllerProgrammer.Common.Services;assembly=ControllerProgrammer.Common"
              xmlns:local="clr-namespace:ControllerProgrammer.ProgramForm.Views"             
              xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
              xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
@@ -34,7 +35,30 @@
     <dx:LoadingDecorator>
         <dxlc:DockLayoutControl>
             <dxlc:GroupBox Header="Power Density Table" dxlc:DockLayoutControl.Dock="Client">
-                <dxg:GridControl x:Name="_led1PowerDensities"
+                <dxb:BarManager>
+                    <dxb:BarManager.Bars>
+                        <dxb:Bar Style="{StaticResource BarStyle}">
+                            <dxb:BarButtonItem x:Name="_instanceTableExportXL"
+                                       BarItemDisplayMode="ContentAndGlyph"
+                                       Command="{Binding ExportTableCommand}"
+                                       CommandParameter="Xlsx"
+                                       Content="Export Excel"
+                                       Glyph="{dx:DXImage Image=ExportToXLSX_16x16.png}" />
+                            <dxb:BarButtonItem x:Name="_instanceTableExportPDF"
+                                       BarItemDisplayMode="ContentAndGlyph"
+                                       Command="{Binding ExportTableCommand}"
+                                       CommandParameter="Pdf"
+                                       Content="Export PDF"
+                                       Glyph="{dx:DXImage Image=ExportToPDF_16x16.png}" />
+                            <dxb:BarButtonItem x:Name="_instanceTableExportCSV"
+                                       BarItemDisplayMode="ContentAndGlyph"
+                                       Command="{Binding ExportTableCommand}"
+                                       CommandParameter="Csv"
+                                       Content="Export CSV"
+                                       Glyph="{dx:DXImage Image=ExportToCSV_16x16.png}" />
+                        </dxb:Bar>
+                    </dxb:BarManager.Bars>
+                    <dxg:GridControl x:Name="_led1PowerDensities"
                                  AllowUpdateTwoWayBoundPropertiesOnSynchronization="True"
                                  ItemsSource="{Binding PowerDensities, Mode=TwoWay}"
                                  SelectedItem="{Binding CurrentPowerDensity, Mode=TwoWay}"
@@ -42,92 +66,39 @@
                                  DefaultSorting="Current DESC"
                                  SelectionMode="Row"
                                  Style="{StaticResource GridControlStyle}">
-                    <dxg:GridControl.View>
-                        <dxg:TableView x:Name="tTableView"
+                        <dxmvvm:Interaction.Behaviors>
+                            <serviceCommon:GridExportService x:Name="GridExportService" />
+                        </dxmvvm:Interaction.Behaviors>
+                        <dxg:GridControl.View>
+                            <dxg:TableView x:Name="tTableView"
                                        HorizontalScrollbarVisibility="Visible"
                                        ShowSearchPanelMode="Never"
-                                       AllowEditing="True"
-                                       
+                                       AllowEditing="True"                  
                                        EditFormShowMode="Inline"
                                        Style="{StaticResource TableViewStyleNoMaster}">
-                            <dxg:TableView.EditFormTemplate>
-                                <DataTemplate>
-                                    <GroupBox Header="Edit Form">
-                                        <Grid>
-                                            <Grid.RowDefinitions>
-                                                <RowDefinition />
-                                                <RowDefinition />
-                                                <RowDefinition />
-                                                <RowDefinition />
-                                            </Grid.RowDefinitions>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="0.3*" />
-                                                <ColumnDefinition />
-                                            </Grid.ColumnDefinitions>
-                                            <TextBlock Text="Current: " Grid.Row="0" Grid.Column="0" />
-                                            <dxg:EditFormEditor FieldName="Current" Grid.Row="0" Grid.Column="1" Margin="2" />
-                                            <TextBlock Text="Power Density: " Grid.Row="1" Grid.Column="0" />
-                                            <dxg:EditFormEditor FieldName="PowerDenisty" Grid.Row="1" Grid.Column="1" Margin="2" />
-                                            <StackPanel  Grid.Row="3" Grid.Column="1" Orientation="Horizontal">
-                                                <dx:SimpleButton Content="Apply" Command="{Binding Path=Source.View.DataContext.CommitCommand}" Margin="2"/>
-                                                <dx:SimpleButton Content="Cancel" Command="{Binding Path=Source.View.DataContext.CancelEditCommand}" Margin="2"/>
-                                            </StackPanel>
-                                        </Grid>
-                                    </GroupBox>
-                                </DataTemplate>
-                            </dxg:TableView.EditFormTemplate>
-                        </dxg:TableView>
-                    </dxg:GridControl.View>
-                    <dxg:GridColumn Header="Id" FieldName="PowerDensityId"/>
-                    <dxg:GridColumn FieldName="LedId"/>
-                    <dxg:GridColumn Header="Wavelength(nm)" FieldName="Led.Wavelength" GroupIndex="0" AllowGrouping="True"/>
-                    <dxg:GridColumn Header="Current(mA)" FieldName="Current">
-                        <dxg:GridColumn.EditSettings>
-                            <dxe:TextEditSettings MaskType="Numeric"
-                                                          MaskUseAsDisplayFormat="True"
-                                                          Mask="d" />
-                        </dxg:GridColumn.EditSettings>
-                        <dxg:GridColumn.EditFormTemplate>
-                            <DataTemplate>
-                                <dxe:SpinEdit Name="PART_Editor" Mask="d" MaskType="Numeric"/>
-                            </DataTemplate>
-                        </dxg:GridColumn.EditFormTemplate>
-                    </dxg:GridColumn>
-                    <dxg:GridColumn Header="Power Density(mW/cm^2)" FieldName="PowerDenisty">
-                        <dxg:GridColumn.EditSettings>
-                            <dxe:TextEditSettings MaskType="Numeric"
-                                                  MaskUseAsDisplayFormat="True"
-                                                  Mask="d" />
-                        </dxg:GridColumn.EditSettings>
-                        <dxg:GridColumn.EditFormTemplate>
-                            <DataTemplate>
-                                <dxe:SpinEdit Name="PART_Editor" Mask="d" MaskType="Numeric"/>
-                            </DataTemplate>
-                        </dxg:GridColumn.EditFormTemplate>
-                    </dxg:GridColumn>
-                </dxg:GridControl>
+                            </dxg:TableView>
+                        </dxg:GridControl.View>
+                        <dxg:GridColumn Header="Wavelength(nm)" FieldName="Wavelength" GroupIndex="0" AllowGrouping="True" />
+                        <dxg:GridColumn Header="Current(mA)" FieldName="Current" HorizontalHeaderContentAlignment="Center">
+                            <dxg:GridColumn.EditSettings>
+                                <dxe:TextEditSettings MaskType="Numeric"
+                                                      MaskUseAsDisplayFormat="True"
+                                                      Mask="n3" 
+                                                      HorizontalContentAlignment="Left"/>
+                            </dxg:GridColumn.EditSettings>
+                        </dxg:GridColumn>
+                        <dxg:GridColumn Header="Power Density(mW/cm^2)" FieldName="PowerDensity" HorizontalHeaderContentAlignment="Center" >
+                            <dxg:GridColumn.EditSettings>
+                                <dxe:TextEditSettings MaskType="Numeric"
+                                                      MaskUseAsDisplayFormat="True"
+                                                      Mask="n2"
+                                                      HorizontalContentAlignment="Left"/>
+                            </dxg:GridColumn.EditSettings>
+                        </dxg:GridColumn>
+                    </dxg:GridControl>
+                </dxb:BarManager>
+
             </dxlc:GroupBox>
-            <!--<dxlc:LayoutGroup dxlc:DockLayoutControl.Dock="Bottom"
-                             Header="Program Controller">
-                <dxlc:GroupBox DisplayMode="Light" >
-                    <dxlc:GroupBox.HeaderTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="Save Changes?" HorizontalAlignment="Center"/>
-                        </DataTemplate>
-                    </dxlc:GroupBox.HeaderTemplate>
-                    <dxlc:LayoutGroup HorizontalAlignment="Center">
-                        <dx:SimpleButton Height="50" Width="300"
-                                         Command="{Binding SaveCommand}"
-                                         Content="Save Table Changes"
-                                         IsEnabled="{Binding ControllerConnected}"
-                                         Glyph="{dx:DXImage Image=Save_32x32.png}" />
-                        <dx:SimpleButton Height="50" Width="300"
-                                         Command="{Binding CancelCommand}"
-                                         Content="Undo Table Changes"
-                                         Glyph="{dx:DXImage Image=Close_32x32.png}" />
-                    </dxlc:LayoutGroup>
-                </dxlc:GroupBox>
-            </dxlc:LayoutGroup>-->
         </dxlc:DockLayoutControl>
     </dx:LoadingDecorator>
 </UserControl>
